                     "powerbar" column or "Signal Levels" window and funny
                     signal levels
                    Added "netfuzzycrypt" option, defaulted to true.  This uses
                     the network classifier to force a fuzzy encryption on
                     unencrypted data frames classified as part of an encrypted
                     network.
May 30 2005  devel  Added 'flite' config parameter for 'festival lite', if
                     using flite instead of festival, set it to true
                    Fixed client signal/noise levels in kismet_client
May 27 2005  devel  Merged README updates and OpenBSD updates from Pedro
                    Merged OpenBSD channel display from pedro
                    Added ipw2915 packet source for centrinto a/g cards.
                     Same as the 2200, just has the default channels set to 
                     include 11a.
                    Fixed sigfpu failure if the default channel sets are
                     missing
                    Added OpenBSD workaround for atheros FCS bytes
May 26 2005  devel  Moved to drone protocol 9.  Drone GPS status is now carried
                     in the version packet.  If GPS is enabled on the drone,
                     it will be used for coordinates, if it is not, the server GPS
                     will be used.
                    Updated README and some error messages
                    Took default carrier type out of packet reporting since it
                     could give bad info
                    Fixed several segfaults in kismet_client caused by groups
                     or networks being auto-deleted (like probe_networks being 
                     merged)
                    Sped up kismet_client a fair bit (only recalculate groups
                     when we need to)
                    Merged burst-rate-unit alert support from newcore-devel.
                     You can now set a timeunit for burstrates of alerts, ie