@@ -5,6 +5,8 @@ May 31 2005  devel  Fixed segfault condition in kismet_client caused by the
                      the network classifier to force a fuzzy encryption on
                      unencrypted data frames classified as part of an encrypted
                      network.
+                    More fixes to IP handling -- client aggregation works
+                     better now when finding a network IP
 May 30 2005  devel  Added 'flite' config parameter for 'festival lite', if
                      using flite instead of festival, set it to true
                     Fixed client signal/noise levels in kismet_client
